--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Roman </h1>
-								<p>Candidate for BSME in Physics and Mechanical Engineering<br />
-								Northeastern University<a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Roman Snegach</h1>
+								<h2>Candidate for BSME in Physics and Mechanical Engineering<br />
+								Northeastern University, Boston MA</></h2>
 							</div>
 						</div>
 						<nav>
