--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</article>
 
 					</div>
-
+			<footer>
+  <p></p>
+</footer>
 			</div>
 
 		<!-- BG -->
