--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
+						<div>
 							<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 						</div>
 						<div class="content">
