--- a/index.html
+++ b/index.html
@@ -345,7 +345,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<div id="bg"></div>
+			#bg {
+			  position: fixed;
+			  bottom: 600;
+			  right: 900;
+			}
+			<img id="bg" src="images/bg.jpg" /></img>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
